Update : env template ignore .env

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
+# Running Port
 PORT=8080
 
-# DB
-
-DB_DSN=root:password@tcp(127.0.0.1:3306)/go-wallet?parseTime=true
+# DB (MySQL)
+DB_DSN=root:password@tcp(ip:port)/go-wallet?parseTime=true
